--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
+<head>
 	<title></title>
-//= includes/head.html
-
+	//= includes/head.html
+</head>
 <body>
 //= includes/footer.html
 </body>
